# chrono-solidworks

./: .gitignore  ChronoSolidworks.sln  ClassLibrary1.sln  README.md  UpgradeLog.htm
Backup/ClassLibrary1/: Class1.cs  ClassLibrary1.csproj  ConvexDecompForm.cs  EditChBody.Designer.cs  EditChBody.cs  TesselateToObj.cs  UserControl1.cs  UserControl1.resx
Backup/ClassLibrary1/Properties/: AssemblyInfo.cs
ChronoSolidworksAddIn/: .gitignore  ChModelExporter.cs  ChModelExporterCSharp.cs  ChModelExporterCpp.cs  ChModelExporterJson.cs  ChModelExporterPython.cs  ChModelExporterSerialize.cs  ChModelExporterText.cs  ChScale.cs  ChronoEngine_SwAddin.cs  ChronoEngine_SwAddin.cs.rej  ChronoSolidworksAddIn.csproj  ChronoSolidworks_SwAddin.cs  ChronoSolidworks_SwAddin.cs.rej  ConvertMates.cs  ConvertToCollisionShapes.cs  ConvexDecomp2.Designer.cs  ConvexDecompForm.Designer.cs  ConvexDecompForm.cs  EditChBody.cs  EditChLink.Designer.cs  EditChLink.cs  EditChMotor.Designer.cs  EditChMotor.cs  EditChSDA.Designer.cs  EditChSDA.cs  EditCollisionParameters.Designer.cs  EditCollisionParameters.cs  SidePanel.Designer.cs  SidePanel.cs  SidePanel.resx  TesselateToObj.cs  TessellateToObj.cs  app.config  signature.snk
ChronoSolidworksAddIn/Properties/: AssemblyInfo.cs  Settings.Designer.cs
ChronoSolidworksImportTemplate/: CMakeLists.txt  solid_import_json.cpp  solid_import_pyparser.cpp
ClassLibrary1/: Class1.cs  ClassLibrary1.csproj  ConvertMates.cs  ConvertToCollisionShapes.cs  ConvexDecomp2.cs  EditChBody.Designer.cs  EditChBody.cs  SidePanel.cs  TesselateToObj.cs  UserControl1.Designer.cs  UserControl1.cs  UserControl1.resx
ClassLibrary1/Properties/: AssemblyInfo.cs
MigrationBackup/cce7e527/ChronoSolidworksAddIn/: ChronoSolidworksAddIn.csproj  NuGetUpgradeLog.html
decomp/hacd/inc/: hacdHACD.h
decomp/hacd/src/: hacdRaycastMesh.cpp
decomp/hacd_CLI/: ReadMe.txt  Stdafx.cpp  UpgradeLog.htm  app.aps  hacd_CLI.cpp  hacd_CLI.sln  hacd_CLI.vcxproj  hacd_CLI.vcxproj.filters
decomp/hacd_CLI/Backup/: hacd_CLI.sln
decomp/hacd_CLI/Template/: hacd_CLI.vcxprojResolveAssemblyReference.cache
decomp/vhacd/inc/: vhacdHACD.h
decomposition_hacd_CLI/: AssemblyInfo.cpp  hacd.snk  hacd_CLI.cpp  hacd_CLI.h  hacd_CLI.vcproj  hacd_CLI.vcxproj  hacd_CLI.vcxproj.filters  vhacd_CLI.cpp  vhacd_CLI.h
decomposition_hacd_CLI/hacd/inc/: hacdHACD.h
decomposition_hacd_CLI/hacd/src/: hacdHACD.cpp
installer/: installer_addin.iss
to_put_in_SW_dir/: run_test.py
to_put_in_SW_dir/chronoengine/: run_test.py
to_put_in_SW_dir/chronoengine/examples/collisions/: capital.sldprt  portal.SLDASM  run_test_modified.py
to_put_in_SW_dir/chronoengine/examples/conveyor/: assembly_conveyor.SLDASM  conveyor.py
to_put_in_SW_dir/chronoengine/examples/engine/: ConRod.TTP  ConRod.sldprt  Engine.sldasm  Piston.sldprt  run_test_modified.py
to_put_in_SW_dir/chronoengine/examples/spider_robot/: ArmBase.sldprt  M-410iB-300-03.SLDPRT  M-410iB-300-05.SLDPRT  M-410iB-300-07.SLDPRT  M-410iB-300-11.SLDPRT  M-410iB-300-13.SLDPRT
to_put_in_SW_dir/examples/collisions/: column.sldprt  run_test_modified.py
to_put_in_SW_dir/examples/conveyor/: conveyor.py
to_put_in_SW_dir/examples/engine/: X.BAT  piston_rod.sldasm  run_test_modified.py
to_put_in_SW_dir/examples/spider_robot/: M-410iB-300-02.SLDPRT  M-410iB-300-04.SLDPRT  M-410iB-300-09.SLDPRT
to_put_in_app_dir/: run_test.py
to_put_in_app_dir/ChronoSolidworksImportTemplate/: CMakeLists.txt  solid_import_cpp.cpp  solid_import_json.cpp  solid_import_pychrono.py.in  solid_import_pyparser.cpp
to_put_in_app_dir/examples/addin_tester/: addin_tester_simulation.py
to_put_in_app_dir/examples/addin_tester/cad/: Assem1.SLDASM  FlexibleSubAssem.SLDASM  MainAssembly.SLDASM  Part1.SLDPRT  Part10.SLDPRT  Part11.SLDPRT  Part12.SLDPRT  Part2.SLDPRT  Part3.SLDPRT  Part4.SLDPRT  Part5.SLDPRT  Part6.SLDPRT  Part7.SLDPRT  Part8.SLDPRT  Part9.SLDPRT  RigidSubAssem.SLDASM  SubAssem1.SLDASM
to_put_in_app_dir/examples/addin_tester/cpp_tester/: addin_tester_export.cpp  addin_tester_export.h
to_put_in_app_dir/examples/addin_tester/cpp_tester/addin_tester_export_shapes/: dump_log.txt
to_put_in_app_dir/examples/addin_tester/python_tester/: addin_tester_export.py  addin_tester_simulation.py
to_put_in_app_dir/examples/addin_tester/python_tester/addin_tester_export_shapes/: dump_log.txt
to_put_in_app_dir/examples/collisions/: demo_SW_collisions.py  demo_collisions.py
to_put_in_app_dir/examples/conveyor/: demo_SW_conveyor.py  demo_conveyor.py
to_put_in_app_dir/examples/engine/: ConRod.DSP  ConRod.MAS  Crankshaft.SLDPRT  Engine4c.sldasm  demo_SW_engine.py  demo_engine.py
to_put_in_app_dir/examples/spider_robot/: M-410iB-300 .SLDASM  M-410iB-300-06.SLDPRT  M-410iB-300-08.SLDPRT  M-410iB-300-10.SLDPRT  SPIDER_ROBOT.SLDASM  demo_SW_spider_robot.py
